--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -3,7 +3,7 @@ $bar-stroke: #8D99A6 !default;
 $border-color: #e0e0e0 !default;
 $light-bg: #f5f5f5 !default;
 $light-border-color: #ebeff2 !default;
-$light-yellow: #fcf8e3 !default;
+$light-yellow: #d9ead3 !default; /* #fcf8e3 */
 $text-muted: #666 !default;
 $text-light: #555 !default;
 $text-color: #333 !default;
@@ -37,7 +37,7 @@ $handle-color: #ddd !default;
 	}
 	.today-highlight {
 		fill: $light-yellow;
-		opacity: 0.5;
+		opacity: 1.0; // 0.5;
 	}
 
 	.arrow {
@@ -121,8 +121,14 @@ $handle-color: #ddd !default;
 		font-size: 12px;
 		text-anchor: middle;
 	}
+	.sprint-text {
+		font-size: 14px;
+		text-anchor: start;
+		fill: black;
+	}
 	.upper-text {
 		fill: $text-light;
+		font-size: 16px;
 	}
 	.lower-text {
 		fill: $text-color;
